@@ -8,7 +8,12 @@ copyright_holder    = {{ $dist->copyright_holder }}
 copyright_year      = {{ $copyright_year }}
 license             = {{ $dist->_license_class }}
 
-{{ $dist->name =~ /^Dist-Zilla-Plugin-(.+)$/ ? "[Bootstrap::lib]\n[$1]" : '' }}
+{{
+    ($zilla_plugin) = ($dist->name =~ /^Dist-Zilla-Plugin-(.+)$/g);
+    $zilla_plugin
+        ? $zilla_plugin =~ s/-/::/g && "[Bootstrap::lib]\n[$zilla_plugin]\n"
+        : ''
+}}
 [@Author::ETHER]
 :version = {{ use Dist::Zilla::PluginBundle::Author::ETHER; Dist::Zilla::PluginBundle::Author::ETHER->VERSION }}
 
