@@ -38,6 +38,13 @@ foreach my $plugin (grep { /Git/ } map { ref } @{$tzil->plugins})
 $tzil->mint_dist;
 my $mint_dir = path($tzil->tempdir)->child('mint');
 
+my $dist_ini = path($mint_dir, 'dist.ini')->slurp_utf8;
+like(
+    $dist_ini,
+    qr/\[Bootstrap::lib\]\n\[Foo::Bar\]\n/m,
+    'found dist.ini content',
+);
+
 my $module = path($mint_dir, 'lib/Dist/Zilla/Plugin/Foo/Bar.pm')->slurp_utf8;
 
 like(
